--- a/main/references.bib
+++ b/main/references.bib
@@ -76,7 +76,6 @@
 }  
 
 
-
 @book{Gradshteyn-Ryzhik,
     author    = "Gradshteyn, I S and Ryzhik, I M",
     title     = "{T}able of {I}ntegrals, {S}eries, and {P}roducts",
@@ -84,6 +83,14 @@
     edition   = "4",
     publisher = "Academic Press",
     isbn      = "0-12-294760-6"
+}
+
+@book{Jackson,
+    author    = "Jackson, J D",
+    title     = "{C}lasical electrodynamics",
+    year      = "1999",
+    edition   = "3",
+    publisher = "Wiely",
 }
 
 @article{Kohler2001,
